src/test/vm/func3.php.exp
HipHop Fatal error: Can't use array() as base in write context in src/test/vm/func3.php on line 4
