src/test/vm/func3.php
<?php

function &foo() {
  return array()[];
}

$a = foo();
